@@ -1,4 +1,8 @@
-2006-06-09 Jorg Schuler <jcsjcs@users.sourceforge.net>
+2006-06-11 Jorg Schuler <jcsjcs@users.sourceforge.net>
+
+	 * src/mp4file.c: read aacgain if present.
+
+2006-06-10 Jorg Schuler <jcsjcs@users.sourceforge.net>
 
 	 * src/ipod_init.[ch]...: renamed init_model_number_combo()
            and init_ipod() to gp_...()
