@@ -29,6 +29,10 @@ gtkpod V0.99.6CVS
        NEW: Support of iTunes iTunNORM tag for volume normalisation of
        mp4 tracks.
 
+       NEW: Support of aacgain's replay gain tag for volume
+       normalisation of mp4 tracks (takes precedence over the iTunNORM
+       tag, see http://altosdesign.com/aacgain/)
+
        NEW: Support for start time, stop time, skip when shuffling and
        remember playback position.
 
